<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_pop_up_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    tools:context="me.plavikrug.PDFReportPopUpWindow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblParametarskiObrazac"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/parametarskiObrzac"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblZaPeriod"
        android:textSize="16sp"
        android:text="@string/lblZaPeriod"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/lblParametarskiObrazac"
        />

    <TextView
        android:id="@+id/lblOd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/lblOd"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/lblZaPeriod"
        app:layout_constraintTop_toBottomOf="@id/lblZaPeriod" />

    <EditText
        android:id="@+id/txtOdDan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintDan"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/lblOd"
        app:layout_constraintTop_toBottomOf="@id/lblZaPeriod" />

    <EditText
        android:id="@+id/txtOdMjesec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintMjesec"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/txtOdDan"
        app:layout_constraintTop_toBottomOf="@id/lblZaPeriod" />

    <EditText
        android:id="@+id/txtOdGodina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintGodina"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/txtOdMjesec"
        app:layout_constraintTop_toBottomOf="@id/lblZaPeriod" />

    <TextView
        android:id="@+id/lblDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lblDo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/lblZaPeriod"
        app:layout_constraintTop_toBottomOf="@id/lblOd" />

    <EditText
        android:id="@+id/txtDoDan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintDan"
        android:maxLength="2"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/lblDo"
        app:layout_constraintTop_toBottomOf="@id/lblOd" />

    <EditText
        android:id="@+id/txtDoMjesec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintMjesec"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/txtDoDan"
        app:layout_constraintTop_toBottomOf="@id/lblOd" />

    <EditText
        android:id="@+id/txtDoGodina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtHintGodina"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/txtDoMjesec"
        app:layout_constraintTop_toBottomOf="@id/lblOd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPokreniIzvjestaj"
        android:text="@string/btnPokreniIzvjestaj"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lblDo"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        />

</android.support.constraint.ConstraintLayout>
