<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="me.plavikrug.DodajMjerenje"
        android:id="@+id/activity_dodaj_mjerenje"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/polu_kv_left"
                    android:padding="6dp"
                    android:drawableLeft="@mipmap/ic_datum"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/btn_datum"
                    />
                <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:textColor="@color/colorBlack"
                 android:background="@drawable/polu_kv_right"
                 android:text="@string/vrijeme"
                 android:padding="6dp"
                 android:drawableRight="@mipmap/ic_vrijeme"
                 android:layout_alignParentRight="true"
                 android:id="@+id/btn_vrijeme"
                 />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/txtSecer"
                    android:text="@string/nivo_secera"
                    />
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:id="@+id/gl_measure"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:textAllCaps="false"
                    android:text="@string/mjera_gl"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_tip_mjer"
                    android:text="@string/tip_mjer"
                    android:textSize="20dp"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner">

                </Spinner>



            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_insulin"
                    android:id="@+id/lbl_insulin"
                    android:textSize="18dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="18dp"
                    android:id="@+id/txt_insulin"
                    android:maxLength="2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_korekcija"
                    android:id="@+id/lbl_korekcija"
                    android:textSize="18dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="18dp"
                    android:id="@+id/txt_korekcija"
                    android:maxLength="2"
                    />
            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pozicije"
                android:id="@+id/img_pozicija"
                android:layout_gravity="center"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:id="@+id/btn_submit"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteMjerenje"
                android:text="@string/delete"
                android:visibility="gone"
                android:drawableBottom="@mipmap/deleteimg"/>


        </LinearLayout>

</LinearLayout>

</ScrollView>