<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_back_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="me.plavikrug.BackUpActivity">

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorWhite"
        android:id="@+id/btnBackUpPomoc"
        android:padding="5dp"
        android:text="@string/pomoc"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />/!-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBackUpPercentage"
        android:textColor="@color/colorWhite"
        android:textSize="100sp"
        android:text="0%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBackUpSyncedText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtBackUpPercentage"
        android:text="@string/txtBackUpSyncedText"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorWhite"
        android:id="@+id/btnMakeBackUp"
        android:text="@string/btnMakeBackUp"
        android:layout_below="@id/txtBackUpSyncedText"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorWhite"
        android:id="@+id/btnDoBackUp"
        android:padding="5dp"
        android:text="@string/btnDoBackUp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_below="@+id/btnMakeBackUp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
